--- a/NLTK Chapter 8.ipynb
+++ b/NLTK Chapter 8.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,6 +97,23 @@
     "parser = nltk.ChartParser(gr_grammar)\n",
     "for tree in parser.parse(sent):\n",
     "    print(tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nltk.ne_chunk(nltk.pos_tag(sent)).draw())"
    ]
   },
   {
@@ -1179,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -1200,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1233,21 +1250,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(S (NP Jack) (VP (TV saw) (NP telescopes))) (p=0.064)\n"
+      "None\n"
      ]
     }
    ],
    "source": [
     "viterbi_parser = nltk.ViterbiParser(grammar)\n",
     "for tree in viterbi_parser.parse(['Jack', 'saw', 'telescopes']):\n",
-    "    print(tree)"
+    "    print(tree.draw())"
    ]
   },
   {
@@ -1255,6 +1272,177 @@
    "metadata": {},
    "source": [
     "Now that parse trees are assigned probabilities, it no longer matters that there may be a huge number of possible parses for a given sentence. A parser will be responsible for finding the most likely parses."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "example = \"Jack saw a telescope\".split()\n",
+    "tags = nltk.pos_tag(example)\n",
+    "chunk = nltk.ne_chunk(tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "chunk.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Jack', 'NNP'), ('saw', 'VBD'), ('a', 'DT'), ('telescope', 'NN')]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "example = \"I cut my Knee\".split()\n",
+    "tags = nltk.pos_tag(example)\n",
+    "chunk = nltk.ne_chunk(tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('I', 'PRP'), ('cut', 'VBD'), ('my', 'PRP$'), ('Knee', 'NNP')]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "chunk.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "example = \"I have a cut on my knee\".split()\n",
+    "tags = nltk.pos_tag(example)\n",
+    "chunk = nltk.ne_chunk(tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('I', 'PRP'),\n",
+       " ('have', 'VBP'),\n",
+       " ('a', 'DT'),\n",
+       " ('cut', 'NN'),\n",
+       " ('on', 'IN'),\n",
+       " ('my', 'PRP$'),\n",
+       " ('knee', 'NN')]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "example = \"Show me the weather\".split()\n",
+    "tags = nltk.pos_tag(example)\n",
+    "chunk = nltk.ne_chunk(tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Show', 'VB'), ('me', 'PRP'), ('the', 'DT'), ('weather', 'NN')]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "chunk.draw()"
    ]
   },
   {
