--- a/NLTK Chapter 6.ipynb
+++ b/NLTK Chapter 6.ipynb
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -911,18 +911,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'previous_word': 'an',\n",
+       " 'suffix(1)': 'n',\n",
+       " 'suffix(2)': 'on',\n",
+       " 'suffix(3)': 'ion'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pos_features(brown.sents()[0],8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -938,11 +950,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9977125808055693"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "size = int(len(feature_sets)*0.1)\n",
     "train_set, test_set = feature_sets[size:],  feature_sets[:size]\n",
@@ -952,11 +973,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('previous_word', ('to', 'TO')),\n",
+       " ('previous_word', ('the', 'AT')),\n",
+       " ('previous_word', ('of', 'IN')),\n",
+       " ('previous_word', '<START>'),\n",
+       " ('previous_word', ('a', 'AT'))]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "classifier.most_informative_features(5)"
    ]
@@ -1223,7 +1257,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "[post.text for post in posts[:10]]"
@@ -1247,7 +1283,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "feature_set = [(dialogue_act_features(post.text), post.get('class'))\n",
@@ -1312,7 +1350,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rtepair = nltk.corpus.rte.pairs(['rte3_dev.xml'])[33]\n",
@@ -1323,7 +1363,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(extractor.hyp_words)"
@@ -1332,7 +1374,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(extractor.overlap('word'))"
@@ -1341,7 +1385,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "extractor.overlap('ne')"
@@ -1350,7 +1396,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "extractor.hyp_extra('word')"
