--- a/NLTK Chapter 9.ipynb
+++ b/NLTK Chapter 9.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "kim = {'CAT': 'NP', 'ORTH': 'Kim', 'REF':'k'}\n",
@@ -758,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -774,6 +776,46 @@
     "tokens= nltk.word_tokenize(string)\n",
     "tags= nltk.pos_tag(tokens)\n",
     "print(nltk.ne_chunk(tags).draw())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = 'play a song on itunes'\n",
+    "tokens= nltk.word_tokenize(string)\n",
+    "tags= nltk.pos_tag(tokens)\n",
+    "print(nltk.ne_chunk(tags).draw())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('play', 'VB'), ('a', 'DT'), ('song', 'NN'), ('on', 'IN'), ('itunes', 'NNS')]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tags"
    ]
   },
   {
