--- a/NLTK Chapter 6.ipynb
+++ b/NLTK Chapter 6.ipynb
@@ -911,6 +911,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['The',\n",
+       " 'Fulton',\n",
+       " 'County',\n",
+       " 'Grand',\n",
+       " 'Jury',\n",
+       " 'said',\n",
+       " 'Friday',\n",
+       " 'an',\n",
+       " 'investigation',\n",
+       " 'of',\n",
+       " \"Atlanta's\",\n",
+       " 'recent',\n",
+       " 'primary',\n",
+       " 'election',\n",
+       " 'produced',\n",
+       " '``',\n",
+       " 'no',\n",
+       " 'evidence',\n",
+       " \"''\",\n",
+       " 'that',\n",
+       " 'any',\n",
+       " 'irregularities',\n",
+       " 'took',\n",
+       " 'place',\n",
+       " '.']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "brown.sents()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -1004,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -1045,11 +1089,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7980528511821975\n"
+     ]
+    }
+   ],
    "source": [
     "tagged_sents = brown.tagged_sents(categories = 'news')\n",
     "size = int(len(tagged_sents)*0.1)\n",
