--- a/NLTK Chapter 8.ipynb
+++ b/NLTK Chapter 8.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -60,18 +60,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -95,6 +85,39 @@
     "sent = ['I', 'shot', 'an', 'elephant', 'in', 'my', 'pajamas']\n",
     "\n",
     "parser = nltk.ChartParser(gr_grammar)\n",
+    "for tree in parser.parse(sent):\n",
+    "    print(tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "gr_grammar = nltk.CFG.fromstring(\"\"\"\n",
+    "S -> VP NP\n",
+    "PP -> P NP\n",
+    "NP -> Det N | Det N PP | 'I' | N | P\n",
+    "VP -> V NP | VP PP | V\n",
+    "Det -> 'an' | 'my' |'you'\n",
+    "N -> 'elephant' | 'pajamas' | 'Youtube' |'shape'\n",
+    "V -> 'shot' | 'close' | 'open' | 'play'\n",
+    "P -> 'in' | 'on' | 'of'\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sent = ['play', 'Brisingr', 'on', 'Youtube']\n",
+    "parser = nltk.ChartParser(gr_grammar)\n",
+    "# s = parser.parse(sent)\n",
     "for tree in parser.parse(sent):\n",
     "    print(tree)"
    ]
