--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import pandas as np"
+    "import pandas as pd"
    ]
   },
   {
@@ -232,6 +231,36 @@
     "print(temp_list_2)\n",
     "print(temp_list_3)\n",
     "print(temp_list_4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import nltk\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('open', 'JJ'), ('Youtube', 'NN')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sent = 'open Youtube'\n",
+    "tokens = nltk.word_tokenize(sent)\n",
+    "print(nltk.pos_tag(tokens))"
    ]
   },
   {
